# quantum-services

./: .gitignore  CLAUDE-api.md  CLAUDE-jobs.md  CLAUDE-orchestrate.md  Cargo.toml  Dockerfile  IMPROVEMENT_SCAN-orchestrate.md  README-api.md  README-orchestrate.md
crates/qorchestrate-cli/: Cargo.toml
crates/qorchestrate-cli/src/: cli.rs  main.rs  monitor.rs  server.rs  xeb.rs
crates/qorchestrate-cli/src/routes/: artifacts.rs  cancel.rs  mod.rs  result.rs  resume.rs  run.rs  status.rs  stream.rs  templates.rs  validate.rs
crates/qorchestrate-core/: Cargo.toml
crates/qorchestrate-core/src/: condition.rs  dag.rs  errors.rs  event.rs  lib.rs  pipeline.rs  stage.rs
crates/qorchestrate-core/src/types/: chip.rs  geometry.rs  hamiltonian.rs  mod.rs  pulse.rs  qec.rs  twin.rs  yield_types.rs
crates/qorchestrate-executor/: Cargo.toml
crates/qorchestrate-executor/src/: cache.rs  checkpoint.rs  executor.rs  lib.rs  registry.rs  runner.rs  sse.rs  state.rs  tests.rs
crates/qorchestrate-executor/tests/: harness.rs
crates/qorchestrate-stages/: Cargo.toml
crates/qorchestrate-stages/src/: generic.rs  lib.rs
crates/qorchestrate-stages/src/advanced/: bayesian_outer_loop.rs  mod.rs
crates/qorchestrate-stages/src/bench/: predict.rs
crates/qorchestrate-stages/src/chip/: freq_optimize.rs  mod.rs  readout_design.rs  xtalk_analyze.rs
crates/qorchestrate-stages/src/explore/: mod.rs  pareto.rs  yield_report.rs
crates/qorchestrate-stages/src/fabrication/: drc_check.rs  gds_generate.rs  mod.rs  process_recipe.rs  tapeout.rs
crates/qorchestrate-stages/src/meta/: batch.rs  clawhdf5_save.rs  collect_deps.rs  failure_mode.rs  http_post.rs  mod.rs  pipeline_call.rs  skip.rs
crates/qorchestrate-stages/src/oqfp/: build.rs  mod.rs  validate.rs
crates/qorchestrate-stages/src/physics/: bbq_quantize.rs  mod.rs  qem_solve.rs  qem_sweep.rs  scq_simulate.rs
crates/qorchestrate-stages/src/process/: constraints.rs  floquet.rs  mod.rs  processes.rs  pump_design.rs  quantize.rs  regime_scan.rs  summary.rs
crates/qorchestrate-stages/src/pulse/: drag_optimize.rs  grape_optimize.rs  mod.rs
crates/qorchestrate-stages/src/qec/: mod.rs  pqec_assess.rs  qec_compile.rs  qec_threshold.rs  surgery.rs
crates/qorchestrate-stages/src/qpudidp/: cmaes.rs  mod.rs  rmflow.rs
crates/qorchestrate-stages/src/twin/: compare.rs  metrology_acquire.rs  metrology_ingest.rs  mock.rs  mod.rs  qec_update.rs  recal_dispatch.rs  recalibrate.rs
crates/qservices-common/: Cargo.toml
crates/qservices-common/src/: error.rs  foundry.rs  lib.rs  tracing.rs
crates/quantum-api/: Cargo.toml  Dockerfile  IMPROVEMENT_SCAN.md
crates/quantum-api/deploy/: install.sh  quantum-api.service
crates/quantum-api/src/: cal.rs  main.rs  qcvv.rs  symclaw.rs
crates/quantum-api/tests/: integration.rs
crates/quantum-jobs/: Cargo.toml  Dockerfile  IMPROVEMENT_SCAN.md
crates/quantum-jobs/deploy/: install.sh  quantum-jobs.service
crates/quantum-jobs/src/: main.rs
deploy-orchestrate/: rustyqorchestrate.service
docs/: golden-loop.md  stage-coverage.md
scripts/: golden_loop.sh
templates/: active-design-loop.toml  atom-design.toml  atom-gate-bayesian-multi.toml  atom-gate-bayesian.toml  atom-gate-only.toml  characterization-suite.toml  chip-to-calibration.toml  chip_design.toml  design-to-chip.toml  em-to-hamiltonian.toml  fab-to-recalibration.toml  full-loop.toml  full_design.toml  ion-design.toml  modality-compare.toml  parametric-amp-design.toml  parametric-process-design.toml  qchem-molecule-sweep.toml  qchem-resources-single.toml  qec_assessment.toml  sc-chip-quickdesign.toml  simulated-fab-loop.toml  spin-design.toml  spin-platform-sweep.toml  yield-sweep.toml
templates/disabled/: README.md
