[package]
name = "qorchestrate-stages"
version.workspace = true
edition.workspace = true

[dependencies]
qorchestrate-core = { workspace = true }
qorchestrate-executor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
nalgebra = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
