[package]
name = "quantum-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "quantum-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
anyhow = "1"
tracing = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
claw-mesh = { path = "../../../mesh/crates/claw-mesh" }
claw-gds  = { path = "../../../mesh/crates/claw-gds" }
claw-tet  = { path = "../../../mesh/crates/claw-tet" }
qservices-common = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", default-features = false, features = ["util"] }
